--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "run": "deno run --unsafely-ignore-certificate-errors --allow-all main.js"
+    "run": "deno run --unsafely-ignore-certificate-errors --allow-all src/main.js",
+    "build": "deno bundle src/main.js dist/main.js"
   },
   "imports": {
     "log/": "https://deno.land/std@0.174.0/log/",
