--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,5 @@
 {
   "tasks": {
-    "run": "deno run --unsafely-ignore-certificate-errors --allow-all src/main.js",
-    "build": "deno bundle src/main.js jsonr.js"
-  },
-  "imports": {
-    "log/": "https://deno.land/std@0.174.0/log/",
-    "fmt/": "https://deno.land/std@0.174.0/fmt/",
-    "flags/": "https://deno.land/std@0.174.0/flags/"
+    "run": "deno run --unsafely-ignore-certificate-errors --allow-all src/main.js"
   }
 }
