tests update, workspace update

--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false
+  },
   "tasks": {
     "run": "deno run --unsafely-ignore-certificate-errors --allow-all main.js"
   }
