--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
       - run: cd test && deno cache --reload test.js
       - run: cd test && deno task test
       - uses: softprops/action-gh-release@v2
-        #if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             readme.md
