--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,18 +15,20 @@ jobs:
       - run: deno cache --reload main.js
       - run: cd test && deno cache --reload test.js
       - run: cd test && deno task test
-      - run: deno compile --allow-net --allow-read --allow-write --target x86_64-unknown-linux-gnu -o jsonr-linux main.js
-      - run: deno compile --allow-net --allow-read --allow-write --target aarch64-unknown-linux-gnu -o jsonr-linux-arm main.js
-      - run: deno compile --allow-net --allow-read --allow-write --target x86_64-apple-darwin -o jsonr-apple main.js
-      - run: deno compile --allow-net --allow-read --allow-write --target aarch64-apple-darwin -o jsonr-apple-arm main.js
-      - run: deno compile --allow-net --allow-read --allow-write --target x86_64-pc-windows-msvc -o jsonr-windows main.js
-      - uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            jsonr-linux
-            jsonr-linux-arm
-            jsonr-apple
-            jsonr-apple-arm
-            jsonr-windows.exe
+      - if: startsWith(github.ref, 'refs/tags/')
+        steps:
+        - run: deno compile --allow-net --allow-read --allow-write --target x86_64-unknown-linux-gnu -o jsonr-linux main.js
+        - run: deno compile --allow-net --allow-read --allow-write --target aarch64-unknown-linux-gnu -o jsonr-linux-arm main.js
+        - run: deno compile --allow-net --allow-read --allow-write --target x86_64-apple-darwin -o jsonr-apple main.js
+        - run: deno compile --allow-net --allow-read --allow-write --target aarch64-apple-darwin -o jsonr-apple-arm main.js
+        - run: deno compile --allow-net --allow-read --allow-write --target x86_64-pc-windows-msvc -o jsonr-windows main.js
+        - uses: softprops/action-gh-release@v2
+          if: startsWith(github.ref, 'refs/tags/')
+          with:
+            files: |
+              jsonr-linux
+              jsonr-linux-arm
+              jsonr-apple
+              jsonr-apple-arm
+              jsonr-windows.exe
 
