--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,12 @@
 name: Build
 
-on: push
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -15,9 +21,23 @@ jobs:
       - run: deno cache --reload main.js
       - run: cd test && deno cache --reload test.js
       - run: cd test && deno task test
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - run: deno compile --allow-net --allow-read --allow-write --target x86_64-unknown-linux-gnu -o jsonr-linux main.js
+      - run: deno compile --allow-net --allow-read --allow-write --target aarch64-unknown-linux-gnu -o jsonr-linux-arm main.js
+      - run: deno compile --allow-net --allow-read --allow-write --target x86_64-apple-darwin -o jsonr-apple main.js
+      - run: deno compile --allow-net --allow-read --allow-write --target aarch64-apple-darwin -o jsonr-apple-arm main.js
+      - run: deno compile --allow-net --allow-read --allow-write --target x86_64-pc-windows-msvc -o jsonr-windows main.js
       - uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            readme.md
-            LICENSE
+            jsonr-linux
+            jsonr-linux-arm
+            jsonr-apple
+            jsonr-apple-arm
+            jsonr-windows.exe
+
