--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,6 +26,10 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
+      - uses: actions/checkout@v3
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x # Run with latest stable Deno.
       - run: deno compile --allow-net --allow-read --allow-write --target x86_64-unknown-linux-gnu -o jsonr-linux main.js
       - run: deno compile --allow-net --allow-read --allow-write --target aarch64-unknown-linux-gnu -o jsonr-linux-arm main.js
       - run: deno compile --allow-net --allow-read --allow-write --target x86_64-apple-darwin -o jsonr-apple main.js
