chore: rename mod to sdk

--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "exports": {
     ".": "./main.js",
-    "./sdk": "./mod.js"
+    "./sdk": "./sdk.js"
   },
   "compilerOptions": {
     "checkJs": true,
