--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "name": "@sobanieca/jsonr",
+  "description": "CLI tool for interacting with json http api's",
   "version": "1.6.0",
   "license": "MIT",
   "exports": {
