--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,14 @@
   "version": "1.6.0",
   "license": "MIT",
   "exports": {
-    ".": "./main.js",
-    "./sdk": "./sdk.js"
+    ".": {
+      "types": "./main.d.ts",
+      "default": "./main.js"
+    },
+    "./sdk": {
+      "types": "./sdk.d.ts",
+      "default": "./sdk.js"
+    }
   },
   "compilerOptions": {
     "checkJs": true,
