feat: jsonr sdk (#7)
* docs: todo file

* docs: chaining example

* docs: more examples

* feat: sdk draft

* chore: adjust deno json

* chore: pr comments

* docs: version update

* chore: pr comments

* docs: pr review

* docs: todo2

* chore: remove redundant files

* chore: rename args properties

* chore: remove comments

* chore: rename mod to sdk

* chore: fix typo

* feat: sdk init command

* chore: adjust generated script

* chore: init command

* chore: file name for sdk script

* docs: help command update

* docs: help update

* docs: readme update

* docs: package description

* docs: readme update

* fix: types data

* fix: types

* chore: file name update

* chore: sample values

* chore: generate js file

* chore: body serialization

* docs: icon

* docs: casing

* fix: formatting

* fix: lint

--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,21 @@
 {
   "name": "@sobanieca/jsonr",
-  "version": "1.5.4",
+  "description": "CLI tool for interacting with json http api's",
+  "version": "1.6.0",
   "license": "MIT",
-  "exports": "./main.js",
+  "exports": {
+    ".": "./main.js",
+    "./sdk": "./sdk.js"
+  },
   "compilerOptions": {
     "checkJs": true,
     "noImplicitAny": false,
     "strictNullChecks": false
+  },
+  "lint": {
+    "rules": {
+      "exclude": ["no-import-prefix"]
+    }
   },
   "tasks": {
     "run": "deno run --unsafely-ignore-certificate-errors --allow-all main.js"
