--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
       - run: deno fmt --check
       - run: deno lint
       - run: deno task check
+      - run: cd test && deno task test
 
   publish:
     needs: check
