feat: jsonr config file

--- a/deno.json
+++ b/deno.json
@@ -1,20 +1,26 @@
 {
   "name": "@sobanieca/jsonr",
   "description": "CLI tool for interacting with json http api's",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "license": "MIT",
   "exports": "./main.js",
   "compilerOptions": {
     "checkJs": true,
     "noImplicitAny": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "useUnknownInCatchVariables": false
+  },
+  "fmt": {
+    "include": [".", "test/"]
   },
   "lint": {
+    "include": [".", "test/"],
     "rules": {
       "exclude": ["no-import-prefix"]
     }
   },
   "tasks": {
-    "run": "deno run --unsafely-ignore-certificate-errors --allow-all main.js"
+    "run": "deno run --unsafely-ignore-certificate-errors --allow-all main.js",
+    "check": "deno fmt --check && deno lint && deno check main.js && deno check test/test.js && cd test && deno task test"
   }
 }
