--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,10 +51,10 @@ jobs:
 
       - name: Compile binaries
         run: |
-          deno compile --allow-net --allow-read --allow-write --target x86_64-unknown-linux-gnu -o jsonr-linux-x64 main.js
-          deno compile --allow-net --allow-read --allow-write --target aarch64-unknown-linux-gnu -o jsonr-linux-arm64 main.js
-          deno compile --allow-net --allow-read --allow-write --target x86_64-apple-darwin -o jsonr-macos-x64 main.js
-          deno compile --allow-net --allow-read --allow-write --target aarch64-apple-darwin -o jsonr-macos-arm64 main.js
+          deno compile --allow-net --allow-read --allow-write --allow-env=HOME,USERPROFILE --target x86_64-unknown-linux-gnu -o jsonr-linux-x64 main.js
+          deno compile --allow-net --allow-read --allow-write --allow-env=HOME,USERPROFILE --target aarch64-unknown-linux-gnu -o jsonr-linux-arm64 main.js
+          deno compile --allow-net --allow-read --allow-write --allow-env=HOME,USERPROFILE --target x86_64-apple-darwin -o jsonr-macos-x64 main.js
+          deno compile --allow-net --allow-read --allow-write --allow-env=HOME,USERPROFILE --target aarch64-apple-darwin -o jsonr-macos-arm64 main.js
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
